--- a/sass/utilidades/_index.scss
+++ b/sass/utilidades/_index.scss
@@ -25,18 +25,18 @@ body{
         position: fixed;
         z-index: 999;
         border-radius: 50%;
-        bottom: 20px;
-        right: 20px;
+        bottom: 0px;
+        right: 5px;
         padding: 25px;
         transition: ease 0,3s;
         margin-bottom: 2rem;
         .hablemos{
-            color: $color-p
+            color: $color-p;
                 }
          .whatsapp{
             img{
-                width: 10rem;
-                height: 10rem;
+                width: 11rem;
+                height: 11rem;
                }
             
         }
@@ -45,7 +45,9 @@ body{
     .boton-wpp:hover{
         transform: scale(1.1);
         transition: 0.3s;
+        
     }
+    
     .boton-arriba{
         display: flex;
         flex-direction: column;
@@ -53,11 +55,11 @@ body{
         position: fixed;
         z-index: 999;
         border-radius: 50%;
-        bottom: 230px;
-        right: 72px;
+        bottom: 80px;
+        left: 40px;
         padding: 25px;
         transition: ease 0,3s;
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
         .arriba{
             color: $color-p
                 }
