--- a/sass/utilidades/_mediaqueries.scss
+++ b/sass/utilidades/_mediaqueries.scss
@@ -30,7 +30,8 @@ body{
         transition: ease 0,3s;
         margin-bottom: 1rem;
         .hablemos{
-            color: $color-p
+            color: black;
+            font-weight: bold;
                 }
          .whatsapp{
             img{
@@ -46,8 +47,8 @@ body{
         position: fixed;
         z-index: 999;
         border-radius: 50%;
-        bottom: 120px;
-        right: 22px;
+        bottom: 35px;
+        left: 10px;
         padding: 25px;
         transition: ease 0,3s;
         margin-bottom: 2rem;
